--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "dropzone": "^6.0.0-beta.2",
     "tesseract.js": "^5.0.4",
-    "vue": "^3.2.13"
+    "vue": "^3.4.15",
+    "vue2-dropzone": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
